--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "start": "next start -p 3005"
   },
   "dependencies": {
+    "@fullcalendar/core": "^6.1.9",
+    "@fullcalendar/daygrid": "^6.1.9",
+    "@fullcalendar/react": "^6.1.9",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
     "@next-auth/prisma-adapter": "^1.0.7",
@@ -22,6 +25,7 @@
     "@trpc/next": "^10.37.1",
     "@trpc/react-query": "^10.37.1",
     "@trpc/server": "^10.37.1",
+    "date-fns": "^2.30.0",
     "moment": "^2.29.4",
     "next": "^13.5.4",
     "next-auth": "^4.23.0",
