--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "dependencies": {
     "@fullcalendar/core": "^6.1.9",
     "@fullcalendar/daygrid": "^6.1.9",
+    "@fullcalendar/interaction": "^6.1.9",
     "@fullcalendar/react": "^6.1.9",
+    "@fullcalendar/timegrid": "^6.1.9",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
     "@next-auth/prisma-adapter": "^1.0.7",
@@ -30,7 +32,9 @@
     "next": "^13.5.4",
     "next-auth": "^4.23.0",
     "react": "18.2.0",
+    "react-big-calendar": "^1.8.5",
     "react-dom": "18.2.0",
+    "save": "^2.9.0",
     "superjson": "^1.13.1",
     "zod": "^3.22.4"
   },
@@ -38,6 +42,7 @@
     "@types/eslint": "^8.44.2",
     "@types/node": "^18.16.0",
     "@types/react": "^18.2.20",
+    "@types/react-big-calendar": "^1.8.4",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.3.0",
     "@typescript-eslint/parser": "^6.3.0",
