--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@trpc/server": "^10.37.1",
     "date-fns": "^2.30.0",
     "moment": "^2.29.4",
-    "next": "^13.5.4",
+    "next": "14.0.0",
     "next-auth": "^4.23.0",
     "react": "18.2.0",
     "react-big-calendar": "^1.8.5",
