--- a/package.json
+++ b/package.json
@@ -28,12 +28,13 @@
     "@trpc/react-query": "^10.37.1",
     "@trpc/server": "^10.37.1",
     "date-fns": "^2.30.0",
+    "fetch-ponyfill": "^7.1.0",
     "moment": "^2.29.4",
-    "next": "14.0.0",
+    "next": "^14.0.3",
     "next-auth": "^4.23.0",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-big-calendar": "^1.8.5",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.2.0",
     "save": "^2.9.0",
     "superjson": "^1.13.1",
     "zod": "^3.22.4"
@@ -48,7 +49,7 @@
     "@typescript-eslint/parser": "^6.3.0",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.47.0",
-    "eslint-config-next": "^13.5.4",
+    "eslint-config-next": "^14.0.3",
     "postcss": "^8.4.27",
     "prettier": "^3.0.0",
     "prettier-plugin-tailwindcss": "^0.5.1",
